# arxiv-subscription-viewer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  arxiv.txt  arxiv_browser.py  conftest.py  huggingface.py  justfile  main.py  pyproject.toml  pyrefly-baseline.json  semantic_scholar.py  test_arxiv_browser.py  test_huggingface.py  test_semantic_scholar.py  vulture_whitelist.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  pages.yml
docs/: README.md  architecture.md  cheatsheet.md  config-reference.md  digest.md  export.md  history-mode.md  huggingface.md  improvement-ideas.md  index.html  llm-setup.md  search-filters.md  semantic-scholar.md  styles.css  troubleshooting.md  tui-style-guide.md
docs/plans/: 2026-01-23-pdf-download-design.md  2026-01-23-pdf-download-impl.md  2026-02-13-modal-extraction-design.md  2026-02-13-modal-extraction-plan.md
history/: 2026-01-23.txt
scripts/: check_coverage_thresholds.py  check_docs_sync.py  check_quality_budgets.py  check_version_sync.py  render_tui_snapshots.py  report_python_file_sizes.py
src/arxiv_browser/: __init__.py  __main__.py  _ascii.py  action_messages.py  app.py  app_protocols.py  authors.py  cache_cli.py  citation_genealogy.py  cli.py  cli_config_free.py  cli_doctor.py  cli_keybindings.py  cli_resolver.py  completions.py  conference_deadline_config.py  conference_deadline_ui.py  conference_deadlines.py  config.py  config_import_helpers.py  database.py  digest.py  embedding_backends.py  embeddings.py  empty_state.py  enrichment.py  export.py  figure_preview.py  fuzzy.py  help_ui.py  http_retry.py  huggingface.py  io_actions.py  llm.py  llm_providers.py  models.py  palette.py  paper_debate_actions.py  paper_remix_actions.py  parsing.py  (+14 more)
src/arxiv_browser/actions/: __init__.py  _runtime.py  audio_actions.py  comparison_actions.py  constants.py  external_io_actions.py  library_actions.py  llm_actions.py  llm_preset_prompt.py  llm_streaming.py  pane_actions.py  search_api_actions.py  settings_actions.py  triage_actions.py  triage_model_actions.py  trust_gate.py  ui_actions.py
src/arxiv_browser/browser/: __init__.py  _runtime.py  bootstrap.py  browse.py  browse_header.py  chrome.py  constants.py  content.py  contracts.py  core.py  detail_annotations.py  detail_pane.py  discovery.py  empty_state.py  onboarding_hints.py  options.py  reactive_state.py  runtime_state.py  worker_runtime.py
src/arxiv_browser/modals/: __init__.py  base.py  citations.py  collections.py  common.py  discovery.py  editing.py  help.py  llm.py  pdf.py  search.py  settings.py  triage.py  watchlist.py  welcome.py  whats_new.py
src/arxiv_browser/services/: __init__.py  arxiv_api_service.py  download_service.py  enrichment_service.py  interfaces.py  llm_service.py
src/arxiv_browser/widgets/: __init__.py  chrome.py  chrome_status.py  details.py  footer_status.py  listing.py  omni_input.py
tests/: __init__.py  conftest.py  test_app_action_wrapper_coverage.py  test_app_actions_bookmarks_cli_and_guards.py  test_app_actions_collections_and_visible_index.py  test_app_actions_external_io_and_opening.py  test_app_actions_io_and_query.py  test_app_actions_palette_and_similarity.py  test_app_actions_relevance_version_autotag.py  test_app_compat_cli.py  test_app_compat_exports.py  test_app_coverage_actions.py  test_app_hygiene.py  test_app_wrapper_and_helper_coverage.py  test_arxiv_browser.py  test_arxiv_cli_and_restore.py  test_arxiv_collections_quality_and_cli.py  test_arxiv_config_db_similarity_render.py  test_arxiv_core_parsing.py  test_arxiv_date_theme_digest.py  test_arxiv_detail_s2_and_relevance_guards.py  test_arxiv_details_visual_exports.py  test_arxiv_export_summary_modes.py  test_arxiv_hf_and_version_ui.py  test_arxiv_llm_chat_and_detail_helpers.py  test_arxiv_llm_summary_core.py  test_arxiv_metadata_selection_preview_integration.py  test_arxiv_modal_actions_exports.py  test_arxiv_module_and_query_helpers.py  test_arxiv_similarity_export_and_query.py  test_arxiv_tags_and_relevance_ui.py  test_arxiv_textual_browse_integration.py  test_arxiv_watch_theme_history_integration.py  test_audio_actions.py  test_author_tracking.py  test_benchmarks.py  test_branch_behavior_hardening.py  test_browser_browse_chrome_helper_coverage.py  test_browser_content_pdf_cache.py  test_browser_core_helper_coverage.py  (+77 more)
tests/fixtures/: 2026-01-23.txt  2026-01-26.txt  malformed.txt
tests/support/: app_stubs.py  canonical_exports.py  patch_helpers.py  semantic_scholar_helpers.py
