[project]
name = "arxiv-subscription-viewer"
version = "0.1.0"
description = "E-Mail Subscription Viewer for ArXiv"
authors = [
    { name = "Nicolas Sebastian Schuler", email = "nicolas.schuler@kit.edu" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
# Only direct dependencies - transitive deps (rich, pygments, etc.) are handled automatically
dependencies = [
    "textual>=7.3.0",
    "rapidfuzz>=3.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks Textual integration tests requiring app.run_test()",
]
