[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-subscription-viewer"
version = "0.1.2"
description = "E-Mail Subscription Viewer for ArXiv"
authors = [
    { name = "Nicolas Sebastian Schuler", email = "nicolas.schuler@kit.edu" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["arxiv", "papers", "research", "tui", "terminal", "textual", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Terminals",
    "Typing :: Typed",
]
# Only direct dependencies - transitive deps (rich, pygments, etc.) are handled automatically
dependencies = [
    "textual>=7.3.0",
    "rich>=13.0.0",
    "rapidfuzz>=3.0.0",
    "httpx>=0.27.0",
    "platformdirs>=3.0",
]

[project.scripts]
arxiv-viewer = "arxiv_browser.app:main"

[project.urls]
Homepage = "https://github.com/NicolasSchuler/arxiv-subscription-viewer"
Repository = "https://github.com/NicolasSchuler/arxiv-subscription-viewer"
Issues = "https://github.com/NicolasSchuler/arxiv-subscription-viewer/issues"
Changelog = "https://github.com/NicolasSchuler/arxiv-subscription-viewer/releases"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "pyright>=1.1.390",
    "ruff>=0.12.0",
    "deptry>=0.22.0",
    "vulture>=2.14",
    "bandit>=1.8.0",
    "radon>=6.0",
    "xenon>=0.9.3",
    "diff-cover>=9.2",
    "hypothesis>=6.100.0",
    "mutmut>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_browser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (run with '-m slow' or 'just bench')",
    "integration: marks Textual integration tests requiring app.run_test()",
]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PERF", "FURB"]
ignore = [
    "RUF012",  # Textual BINDINGS / CSS are mutable class defaults by convention
    "E501",    # line length handled by formatter
    "SIM105",  # contextlib.suppress less readable than try/except pass
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "F401"]
"conftest.py" = ["F401"]
"vulture_whitelist.py" = ["E402", "F401", "F811", "B018"]

[tool.ruff.lint.isort]
known-first-party = ["arxiv_browser"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pyright ───────────────────────────────────────────────────────────
[tool.pyright]
typeCheckingMode = "basic"
include = ["src/arxiv_browser"]
exclude = ["tests", ".venv"]
reportMissingTypeStubs = false
reportUnusedImport = false

# ── Coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["arxiv_browser"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

# ── Deptry ────────────────────────────────────────────────────────────
[tool.deptry]
extend_exclude = [".venv", "tests"]

[tool.deptry.per_rule_ignores]
DEP003 = ["arxiv_browser"]  # arxiv_browser: intra-package imports

# ── Bandit ────────────────────────────────────────────────────────────
[tool.bandit]
skips = ["B101", "B311", "B314", "B404", "B405"]

# ── Mutmut ────────────────────────────────────────────────────────────
[tool.mutmut]
paths_to_mutate = "src/arxiv_browser/semantic_scholar.py"
tests_dir = "."
